--- a/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/ТЕМА 2.9.md
+++ b/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/ТЕМА 2.9.md
@@ -34,7 +34,7 @@ typora-copy-images-to: ./
 
 подлежащая зашифрованию, и ключ шифрования. Ключ содержит управляющую ин- формацию, которая определяет выбор преобразования на определенных шагах алгоритма и величины операндов, используемые при реализации алгоритма шифрования.
 
-В отличие от других методов криптографического преобразования информации, методы **стеганографии** [2] позволяют скрыть не только смысл хранящейся или передаваемой информации, но и сам факт хранения или передачи закрытой информации. В компьютерных системах практическое использование стеганографии только начинается, но проведенные исследования показывают ее перспективность. В основе всех методов стеганографии лежит маскирование закрытой информации среди открытых файлов. Обработка мультимедийных файлов в КС открыла практически неограниченные возможности перед стеганографией.
+В отличие от других методов криптографического преобразования информации, методы **стеганографии**  позволяют скрыть не только смысл хранящейся или передаваемой информации, но и сам факт хранения или передачи закрытой информации. В компьютерных системах практическое использование стеганографии только начинается, но проведенные исследования показывают ее перспективность. В основе всех методов стеганографии лежит маскирование закрытой информации среди открытых файлов. Обработка мультимедийных файлов в КС открыла практически неограниченные возможности перед стеганографией.
 
 Существует несколько методов скрытой передачи информации. Одним из них является простой метод скрытия файлов при работе в операционной системе MS DOS. За текстовым открытым файлом записывается скрытый двоичный файл, объем которого много меньше текстового файла. В конце текстового файла помещается метка EOF (комбинация клавиш Control и Z). При обращении к этому текстовому файлу стандартными средствами ОС считывание прекращается по достижению метки EOF и скрытый файл остается недоступен. Для двоичных файлов никаких меток в конце файла не предусмотрено. Конец такого файла определяется при обработке атрибутов, в которых хранится длина файла в байтах. Доступ к скрытому файлу может быть получен, если файл открыть как двоичный. Скрытый файл может быть зашифрован. Если кто-то случайно обнаружит скрытый файл, то зашифрованная информация будет воспринята как сбой в работе системы.
 
@@ -84,11 +84,11 @@ typora-copy-images-to: ./
 
 гию и затратах в 300000 долл. требуется в среднем 19 дней, а если разработать специальный чип, то - 3 часа. При затратах в 300 млн. долл. 56- битные ключи могут быть найдены за 12 сек. Расчеты показывают, что в настоящее время для надежного закрытия информации длина ключа должна быть не менее 90 бит.
 
-Все методы шифрования могут быть классифицированы по различным признакам. Один из вариантов классификации приведен на рис. 15 [8].
+Все методы шифрования могут быть классифицированы по различным признакам. Один из вариантов классификации приведен на рис. 15 .
 
 ## 3. Методы шифрования с симметричным ключом Методы замены
 
-Сущность методов замены (подстановки) заключается в замене символов исходной информации, записанных в одном алфавите, символами из другого алфавита по определенному правилу [56]. Самым простым является *метод прямой замены.* Символам исходного алфавита Ао, с помощью которых записывается ис- ходная информация, однозначно ставятся в соответствие символы Su шифрующего алфавита Аь В простейшем случае оба алфавита могут состоять из одного и того же набора символов. Например, оба алфавита могут содержать буквы русского алфавита.
+Сущность методов замены (подстановки) заключается в замене символов исходной информации, записанных в одном алфавите, символами из другого алфавита по определенному правилу. Самым простым является *метод прямой замены.* Символам исходного алфавита Ао, с помощью которых записывается ис- ходная информация, однозначно ставятся в соответствие символы Su шифрующего алфавита Аь В простейшем случае оба алфавита могут состоять из одного и того же набора символов. Например, оба алфавита могут содержать буквы русского алфавита.
 
 Задание соответствия между символами обоих алфавитов осуществляется с помощью преобразования числовых эквивалентов символов исходного текста То, длиной - К символов, по определенному алгоритму.
 
@@ -282,7 +282,7 @@ Ti = <ОП_ТМЕЫДЕСРЕТАОНИ*КВ****>.
 
 
 
-Параллельный двоичный код блока исходной информации (например, два байта) подаются на схему. За счет внутренней коммутации в схеме осуществляется перестановка бит в пределах блока. Для расшифрования блока информации входы и выходы схемы меняются местами [49]. Методы перестановок просто реализуются, но имеют два су-
+Параллельный двоичный код блока исходной информации (например, два байта) подаются на схему. За счет внутренней коммутации в схеме осуществляется перестановка бит в пределах блока. Для расшифрования блока информации входы и выходы схемы меняются местами. Методы перестановок просто реализуются, но имеют два су-
 
 
 
@@ -290,7 +290,7 @@ Ti = <ОП_ТМЕЫДЕСРЕТАОНИ*КВ****>.
 
 ### Аналитические методы шифрования
 
-Для шифрования информации могут использоваться аналитические преобразования [8]. Наибольшее распространение получили методы шифрования, основанные на использовании матричной алгебры. Зашифрование k-го блока исходной информации, представленного в виде вектора Bk = || bj|| , осуществляется путем перемножения матрицы-ключа А= и гы| и вектора Вк. В результате перемножения получается блок шифртекста в виде вектора Ck= Iki
+Для шифрования информации могут использоваться аналитические преобразования. Наибольшее распространение получили методы шифрования, основанные на использовании матричной алгебры. Зашифрование k-го блока исходной информации, представленного в виде вектора Bk = || bj|| , осуществляется путем перемножения матрицы-ключа А= и гы| и вектора Вк. В результате перемножения получается блок шифртекста в виде вектора Ck= Iki
 
  
 
@@ -373,7 +373,7 @@ Ti = <ОП_ТМЕЫДЕСРЕТАОНИ*КВ****>.
 
 ### Аддитивные методы шифрования
 
-Сущность аддитивных методов шифрования заключается в последовательном суммировании цифровых кодов, соответствующих символам исходной информации, с последовательностью кодов, которая соответствует некоторому кортежу символов [56]. Этот кортеж называется *гаммой.* Поэтому аддитивные методы шифрования называют также *гаммироваиием.*
+Сущность аддитивных методов шифрования заключается в последовательном суммировании цифровых кодов, соответствующих символам исходной информации, с последовательностью кодов, которая соответствует некоторому кортежу символов . Этот кортеж называется *гаммой.* Поэтому аддитивные методы шифрования называют также *гаммироваиием.*
 
 Для данных методов шифрования ключом является гамма. Криптостойкость аддитивных методов зависит от длины ключа и равномерности его статистических характеристик. Если ключ короче, чем шифруемая последовательность символов, то шиф-ртекст может быть расшифрован криптоаналитиком статистическими методами исследования. Чем больше разница длин ключа и исходной информации, тем выше вероятность успешной атаки на шифртекст. Если ключ представляет собой непериодическую последовательность случайных чисел, длина которой превышает длину шифруемой информации, то без знания ключа расшифровать шифртекст практически невозможно. Как и для методов замены в качестве ключа могут использоваться неповторяющиеся последовательности цифр, например, в числах *п, е* и других.
 
@@ -387,7 +387,7 @@ T(i+l) = (a*T(i) + c)mod m,
 
 где *а* и *с* - константы, Т(0) - исходная величина, выбранная **в** качестве порождающего числа.
 
-Период повторения такого датчика ПСЧ зависит от величин *а* и с. Значение *т* обычно принимается равным 2s, где s - длина слова ЭВМ в битах. Период повторения последовательности генерируемых чисел будет максимальным тогда и только тогда, когда *с -*нечетное число и *a* (mod 4) = 1 [39]: Такой генератор может быть сравнительно легко создан как аппаратными средствами, так и программно.
+Период повторения такого датчика ПСЧ зависит от величин *а* и с. Значение *т* обычно принимается равным 2s, где s - длина слова ЭВМ в битах. Период повторения последовательности генерируемых чисел будет максимальным тогда и только тогда, когда *с -*нечетное число и *a* (mod 4) = 1: Такой генератор может быть сравнительно легко создан как аппаратными средствами, так и программно.
 
 
 
@@ -395,7 +395,7 @@ T(i+l) = (a*T(i) + c)mod m,
 
 Наряду с традиционным шифрованием на основе секретного ключа в последние годы все большее признание получают системы шифрования с открытым ключом. В таких системах используются два ключа. Информация шифруется с помощью открытого ключа, а расшифровывается с использованием секретного ключа.
 
-В основе применения систем с открытым ключом лежит использование необратимых или односторонних функций [8]. Эти функции обладают следующим свойством. По известному *х* легко определяется функция *у* = f(x). Но по известному значению *у* практически невозможно получить *х.* В криптографии используются односторонние функции, имеющие так называемый потай-
+В основе применения систем с открытым ключом лежит использование необратимых или односторонних функций . Эти функции обладают следующим свойством. По известному *х* легко определяется функция *у* = f(x). Но по известному значению *у* практически невозможно получить *х.* В криптографии используются односторонние функции, имеющие так называемый потай-
 
 ной ход. Эти функции с параметром z обладают следующими свойствами. Для определенного z могут быть найдены алгоритмы Е*z* и *Dz.* С помощью Е*z*, легко получить функцию fz (х) для всех *х* из области определения. Так же просто с помощью алгоритма Dz получается и обратная функция *х -* f'(у) для всех у из области допустимых значений. В то же время практически для всех z и почти для *всех у* из области допустимых значений нахождение f '(у) при помощи вычислений невозможно даже при известном Ег. В качестве открытого ключа используется *у,* а в качестве закрытого - *х.*
 
@@ -403,7 +403,7 @@ T(i+l) = (a*T(i) + c)mod m,
 
 Криптосистемы с открытыми ключами различаются видом односторонних функций. Среди них самыми известными являются системы RSA, Эль-Гамаля и Мак- Элиса. В настоящее время наиболее эффективным и распространенным алгоритмом шифрования с открытым ключом является алгоритм RSA, получивший свое название от первых букв фамилий его создателей: Rivest, Shamir и Adleman.
 
-Алгоритм основан на использовании операции возведения в степень модульной арифметики. Его можно представить в виде следующей последовательности шагов [39].
+Алгоритм основан на использовании операции возведения в степень модульной арифметики. Его можно представить в виде следующей последовательности шагов.
 
 Шаг 1. Выбираются два больших простых числа p и q*.* Простыми называются числа, которые делятся только на самих себя и на 1. Величина этих чисел должна быть больше 200. Шаг 2. Получается открытая компонента ключа *п:*
 
@@ -467,7 +467,7 @@ T(i+l) = (a*T(i) + c)mod m,
 
 Исходная числовая последовательность в расшифрованном виде X (i) = <4, 1, 9> заменяется исходным текстом «ГАЗ».
 
-*Система Элъ-Гамаля* основана на сложности вычисления дискретных логарифмов в конечных полях [22]. Основным недостатком систем RSA и Эль- Гамаля является необходимость выполнения трудоемких операций в модульной арифметике, что требует привлечения значительных вычислительных ресурсов.
+*Система Элъ-Гамаля* основана на сложности вычисления дискретных логарифмов в конечных полях. Основным недостатком систем RSA и Эль- Гамаля является необходимость выполнения трудоемких операций в модульной арифметике, что требует привлечения значительных вычислительных ресурсов.
 
 *Криптосистема Мак-Элиса* использует коды, исправляющие ошибки. Она реализуется в несколько раз быстрее, чем криптосистема RSA, но имеет и существенный недостаток. В криптосистеме *Мак-Элиса* используется ключ большой длины и получаемый шифртекст в два раза превышает длину исходного текста.
 
@@ -479,7 +479,7 @@ T(i+l) = (a*T(i) + c)mod m,
 
 В Российской Федерации установлен государственный стандарт (ГОСТ 28147—
 
-89 [9]) на алгоритмы криптографического преобразования информации в ЭВМ, вычислительных комплексах и вычислительных сетях. Эти алгоритмы допускается использовать  без  ограничений  для  шифрования  информации  любого уровня
+89 ) на алгоритмы криптографического преобразования информации в ЭВМ, вычислительных комплексах и вычислительных сетях. Эти алгоритмы допускается использовать  без  ограничений  для  шифрования  информации  любого уровня
 
 
 
@@ -540,7 +540,7 @@ T(i+l) = (a*T(i) + c)mod m,
 
 Государственным стандартом на шифрование информации является стандарт DES (Data Encryption Standard). Алгоритм шифрования, положенный в основу стандарта, был разработан фирмой IBM. После проверки специалистами Агентства Национальной Безопасности США алгоритм получил статус государственного стандарта. Стандарт DES используется федеральными департаментами для закрытия информации в автоматизированных системах, за исключением некоторых видов информации, определенных специальными актами. Кроме того, этот стандарт шифрования широко используется негосударственными организациями не только в США, но и во всем мире.
 
-В стандарте DES исходная информация разбивается на блоки по 64 бита в каждом и подвергается криптографическому преобразованию с использованием ключа, длиной 56 или 64 бита [39]. Блоки исходной информации подвергаются итерационной обработке с использованием операций перестановки и функции шифрования. Для вычисления функции шифрования предусматривается получение 48-битового ключа из 64-битового, расширение 32-битового кода до 48-битового, преобразование 6-битового кода в 4-битовый и перестановка бит в 32-битовой последовательности [3].
+В стандарте DES исходная информация разбивается на блоки по 64 бита в каждом и подвергается криптографическому преобразованию с использованием ключа, длиной 56 или 64 бита . Блоки исходной информации подвергаются итерационной обработке с использованием операций перестановки и функции шифрования. Для вычисления функции шифрования предусматривается получение 48-битового ключа из 64-битового, расширение 32-битового кода до 48-битового, преобразование 6-битового кода в 4-битовый и перестановка бит в 32-битовой последовательности.
 
 Процесс расшифрования является инверсным по отношению к процессу шифрования и выполняется с использованием того же ключа, что и при шифровании.
 
