--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.1/3.1.md
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.1/3.1.md
@@ -3,11 +3,15 @@ typora-copy-images-to: ./
 typora-root-url: ./
 ---
 
+[TOC]
+
+
+
 # ТЕМА 3.1 ОСНОВНЫЕ ПОЛОЖЕНИЯ И ПРИНЦИПЫ ЯЗЫКА CSS2
 
  
 
-## **Введение в каскадные таблицы стилей**
+## Введение в каскадные таблицы стилей
 
  
 
@@ -19,7 +23,7 @@ typora-root-url: ./
 
  
 
-*Сравнение:*
+Сравнение:
 
 
 ```html
@@ -86,17 +90,17 @@ font-style:italic}
 
 Для того чтобы браузер применял правила какой-либо таблицы стилей к HTML- документу, необходимо связать таблицу стилей и документ друг с другом. Существует четыре метода, которыми это можно сделать:
 
-*  Внедрение — задание таблицы стилей непосредственно в заголовке самого HTML-документа в качестве содержимого элемента STYLE.
+  Внедрение — задание таблицы стилей непосредственно в заголовке самого HTML-документа в качестве содержимого элемента STYLE.
 
-*  Присоединение — таблица стилей находится во внешнем файле и присоединяется к HTML-документу через элемент Link. При этом CSS-файл с внешней таблицей стиля всегда сопровождает HTML-файл документа.
+  Присоединение — таблица стилей находится во внешнем файле и присоединяется к HTML-документу через элемент Link. При этом CSS-файл с внешней таблицей стиля всегда сопровождает HTML-файл документа.
 
-![img](/clip_image001.gif)*  Импортирование — текст таблицы стилей, находящейся во внешнем файле на сервере, импортируется с помощью Css-свойства @import внутрь текста HTML- файла.
+![img](/clip_image001.gif)  Импортирование — текст таблицы стилей, находящейся во внешнем файле на сервере, импортируется с помощью Css-свойства @import внутрь текста HTML- файла.
 
-*  Поэлементное задание стиля — для всех HTML-элементов определен атрибут STYLE и через него, используя синтаксис CSS2, можно задавать (или переопределять) стиль для каждого элемента индивидуально.
+  Поэлементное задание стиля — для всех HTML-элементов определен атрибут STYLE и через него, используя синтаксис CSS2, можно задавать (или переопределять) стиль для каждого элемента индивидуально.
 
 Внедрение, как уже упоминалось выше, осуществляется HTML-элементом заголовка STYLE. Именно в его содержимом и задается каскадная таблица стилей. При этом атрибут type элемента STYLE должен быть установлен в значении "text/css".
 
-*Например:*
+Например:
 
  ```html
 
@@ -168,18 +172,18 @@ font-style:italic}
 ```
 
 
-Здесь *file_of_style.css* — имя файла, в котором хранится подключаемая таблица стилей. Файл, по сути является текстовым и содержит перечень правил CSS2. Пример текста файла с внешней таблицей стиля:
+Здесь file_of_style.css — имя файла, в котором хранится подключаемая таблица стилей. Файл, по сути является текстовым и содержит перечень правил CSS2. Пример текста файла с внешней таблицей стиля:
 ``` css
 
-*Body {font-family:sans-serif font-size:14 pt}*
+Body {font-family:sans-serif font-size:14 pt}
 
-*P  {background — color:  yellow}*
+P  {background — color:  yellow}
 ```
 В содержимое элемента STYLE можно импортировать таблицу стилей, хранящуюся во внешнем файле на сервере. Это осуществимо благодаря особому свойству @import каскадных таблиц стилей. При этом задание элемента STYLE будет иметь следующий вид:
 
 ``` html
 
-*<STYLE type = "text/сss ">*
+<STYLE type = "text/сss ">
 
 @import URL(www.servername/file_of_style)
 
@@ -187,7 +191,7 @@ font-style:italic}
 ```
 Значением свойства ©import является URL-адрес файла, хранящего в себе импортируемую таблицу стилей. Элемент STYLE вместе с описанием свойства ©import может содержать в себе и другие правила. Надо только, чтобы они следовали после задания свойства ©import.
 
-*Например:*
+Например:
 
 
 ```html
@@ -224,7 +228,7 @@ P {background — color: yellow}
 
 Начинаются ©правила с ключевого символа @, непосредственно за которым следует указание имени правила. Затем ©правило включает в себя все, что находится до первого символа точки с запятой или другого правила. Следует помнить, что все правила ©import, которые находятся внутри блока определений другого ©правила, будут проигнорированы браузером.
 
-*Пример недопустимого задания:*
+Пример недопустимого задания:
 
 ```css
 @media print {@import URL("style_file_for_printer.css")}
@@ -234,20 +238,20 @@ P {background — color: yellow}
 
 К тому же, если таблица стилей содержит еще другие правила, кроме правил ©import, то эти правила должны располагаться ниже по тексту правил ©import.
 
-*Пример неправильного задания:*
+Пример неправильного задания:
 ```css
 Р  {background-color:green}
 
 @ import  URL("  file_of_style.css  ")
 ```
 ```css
-*Пример правильного задания:*
+Пример правильного задания:
 
 @ import   URL("     file_of_style.css  ") Р {background-color:green}
 ```
 Все обычные правила каскадных таблиц стилей состоят из двух частей: селектора и блока определений и имеют следующий вид:
 
-*селектор {блок определений}.*
+селектор {блок определений}.
 
 Селектором служит название HTML-элемента, или комбинация названий HTML- элементов, для которых и задается правило форматирования. Блок определений начинается с левой фигурной скобки "{" и заканчивается правой фигурной скобкой "}". Все, что находится перед левой фигурной скобкой, считается селектором. Пример:
 
@@ -273,7 +277,7 @@ P {background — color: yellow}
 
 Несколько объявлений для одного селектора могут быть объединены в группы, отделяясь, друг от друга точкой или запятой.
 
-*Например:*
+Например:
 
 Следующий набор правил
 
@@ -297,11 +301,11 @@ P{background-color: blue}
 
 Каскадные таблицы стилей CSS2 не учитывают регистр. Это значит, что названия правил, селекторов и их значения можно указывать как прописными, так и строчными буквами. Чувствительными к регистру могут оказаться объекты, присутствующие в таблице стилей, но не являющиеся объектами языка CSS. Например, по-прежнему учитывается регистр атрибутов id и class у HTML-элементов.
 
-***Примечание.\*** *Если таблицы стилей будут применяться к XML-файлам, то необходимо помнить о том, что имена элементов в XML (в отличие от HTML) также являются чувствительными к регистру.*
+Примечание.\ Если таблицы стилей будут применяться к XML-файлам, то необходимо помнить о том, что имена элементов в XML (в отличие от HTML) также являются чувствительными к регистру.
 
-При написании текста таблиц стилей допустимо использование комментариев. Они должны начинаться символом "/*" и заканчиваться символом "*/" Например:
+При написании текста таблиц стилей допустимо использование комментариев. Они должны начинаться символом "/" и заканчиваться символом "/" Например:
 
-В {font-color: blue; /*комментарии */ font-size : 14pt /* комментарии */}
+В {font-color: blue; /комментарии / font-size : 14pt / комментарии /}
 
 В CSS допустимо также использование комментариев "<!--" и "-->", установленных в HTML. При корретной поддержке CSS-таблиц стилей браузером группы символов "<!-- " "
 
@@ -363,39 +367,45 @@ font-color: black; font-color: 12pt} -->
 
 Ø Если указано имя несуществующего свойства (или сделана ошибка при написании существующего), то браузером будет проигнорировано объявление, его содержащее. Например, правило
 
-*В {font-color: blue;*
+```css
+В {font-color: blue;
 
-*thick:15; /\*thick - несуществующее свойство\*/ font-size:14 pt}*
+thick:15; /\thick - несуществующее свойство\/ font-size:14 pt}
 
 будет воспринято браузером как:
 
-*В (font-color: blue; font-size : 14 pt}*
+В (font-color: blue; font-size : 14 pt}
 
 Ø Если для определенного в CSS2 свойства указано недопустимое значение, то также будет проигнорировано содержащее его объявление. Например, фрагмент таблицы стилей:
 
-*Р {font-color:black}*
+Р {font-color:black}
 
-*P{background-color:"lightgrey"} /\* некорректное задание, т.к. ключевое слово заключено в кавычки \*/*
+P{background-color:"lightgrey"} /\ некорректное задание, т.к. ключевое слово заключено в кавычки \/
 
-*Р{font-size:АЗх} /\* неверное задание размера шрифта\*/*
+Р{font-size:АЗх} /\ неверное задание размера шрифта\/
 
 после синтаксической проверки примет следующий вид:
 
-*P{font-color: black} Р{ }*
+P{font-color: black} Р{ }
 
-*Р{}*
+Р{}
 
 Ø Если неверно задано имя ©правила, то игнорируется все, что относится к этому правилу. Например, фрагмент CSS-таблицы:
 
-*@superstyle {*
+@superstyle {
 
-*Р { font-color: black; background-color: lightgrey}*
+Р { font-color: black; background-color: lightgrey}
 
-*НЗ{font-color: yellow}*
+НЗ{font-color: yellow}
 
-*}*
+}
 
-*BODY Ifont.-familv:Arial 1*
+BODY Ifont.-familv:Arial 1
+```
+
+
+
+
 
  
 
@@ -405,9 +415,9 @@ font-color: black; font-color: 12pt} -->
 
 
 
-*BODY {font-style:Arial}*
+BODY {font-style:Arial}
 
-*так как @правило @superstyle в CSS2 не определено.*
+так как @правило @superstyle в CSS2 не определено.
 
 ## Допустимые значения величин, используемых в CSS2
 
@@ -421,27 +431,27 @@ font-color: black; font-color: 12pt} -->
 
 В CSS2 допустимо использование двух типов задание длины: относительное задание и абсолютное. Относительное задание длины подразумевает ее задание относительно чего-то. К относительным единицам относятся:
 
-*em.......................... lem равен используемому значению свойства font-size элемента, к*
+em.......................... lem равен используемому значению свойства font-size элемента, к
 
-*которому данный em-размер применяется;*
+которому данный em-размер применяется;
 
-*ex............................ lex равен размеру высоты строчной буквых для используемого шрифта;*
+ex............................ lex равен размеру высоты строчной буквых для используемого шрифта;
 
-*рх............................ указывает размер в пикселах и, соответственно, зависит от разрешения*
+рх............................ указывает размер в пикселах и, соответственно, зависит от разрешения
 
-*экрана.*
+экрана.
 
 Использование  абсолютных  единиц  измерения                 предпочтительно     только     в                 тех случаях, когда известны геометрические размеры устройства вывода.
 
-*cm........................... сантиметр;*
+cm........................... сантиметр;
 
-*mm.......................... миллиметр;*
+mm.......................... миллиметр;
 
-*in............................ дюйм (1 дюйм равен 2,54 см);*
+in............................ дюйм (1 дюйм равен 2,54 см);
 
-*pt............................ точка (point). В CSS2 lpt = 1/72 дюйма;*
+pt............................ точка (point). В CSS2 lpt = 1/72 дюйма;
 
-*рс............................ пика. В CSS2 1пика = 12 точкам.*
+рс............................ пика. В CSS2 1пика = 12 точкам.
 
  
 
@@ -451,11 +461,11 @@ font-color: black; font-color: 12pt} -->
 
 Указание URL-адреса в CSS2 осуществляется в следующем формате:
 
-*url  (*[*" www.nam6server.com"*](http://www.nam6server.com/)*)*
+url  ([" www.nam6server.com"](http://www.nam6server.com/))
 
 Например, указать адрес фонового изображения можно следующим способом:
 
-*Body {background: url*[ *(w*](http://www.myserver.da.ru/myimage.gif)*w*[*w.myserver.da.ru/myimage.gif* ](http://www.myserver.da.ru/myimage.gif)*)}*
+Body {background: url[ (w](http://www.myserver.da.ru/myimage.gif)w[w.myserver.da.ru/myimage.gif ](http://www.myserver.da.ru/myimage.gif))}
 
 При этом допустимо использование как абсолютных, так и относительных URL- адресов.
 
@@ -465,7 +475,7 @@ font-color: black; font-color: 12pt} -->
 
 §  указание цвета с помощью ключевых слов. Пример:
 
-*H3{color: blue}*
+H3{color: blue}
 
  
 
@@ -473,21 +483,21 @@ font-color: black; font-color: 12pt} -->
 
 §  указание цвета с помощью шестнадцатеричного задания его RGB-кода. Например:
 
-*НЗ {color: # FFFFFFFF}*
+НЗ {color: # FFFFFFFF}
 
 
 
 §  указание цвета с помощью десятеричного задания его RGB-кода. При этом используются целые числа в диапазоне от 0 до 255. Например:
 
-*НЗ (color: rgb (0,255,0)} /\* зеленым цветом\*/*
+НЗ (color: rgb (0,255,0)} /\ зеленым цветом\/
 
 §  указание цвета с помощью процентного задания насыщенности каждого из цветов в RGB-коде. При этом используются вещественные числа в интервале от 0% до 100%. Например:
 
-*НЗ {color: rgb (0%,100%,0%) }*
+НЗ {color: rgb (0%,100%,0%) }
 
 Числовые значения, выходящие за допустимые пределы, приводятся к ближайшему предельному значению. Например:
 
-*НЗ {color: rgb (0,300,0) }*
+НЗ {color: rgb (0,300,0) }
 
  
 
@@ -495,19 +505,19 @@ font-color: black; font-color: 12pt} -->
 
 будет уменьшено до
 
-*НЗ (color: rgb (0,255,0)}*
+НЗ (color: rgb (0,255,0)}
 
-*H1 {color: rgb (-10%,50%,20%)} до H1 {color: rgb (0%,50%,20%)}*
+H1 {color: rgb (-10%,50%,20%)} до H1 {color: rgb (0%,50%,20%)}
 
 ## Углы
 
 Углы в каскадных таблицах стилей, написанных на языке CSS2, могут быть заданы в следующих единицах измерения:
 
-*deg......................... градусы;*
+deg......................... градусы;
 
-*rad.......................... радианы;*
+rad.......................... радианы;
 
-*grad........................ грады.*
+grad........................ грады.
 
 Значения углов могут быть отрицательными и задаваться как целыми, так и вещественными числами.
 
@@ -530,7 +540,7 @@ font-color: black; font-color: 12pt} -->
 
 
 
-**Рис. 5.1.** *Пример простого селектора*
+Рис. 5.1. Пример простого селектора
 
 Простые селекторы употребляются наиболее часто. Однако язык CSS2 позволяет использовать более широкие возможности для создания таблиц стилей. Например, можно описать свойства HTML-элемента, который является дочерним по отношению к другому HTML-элементу. Также можно использовать селектор, правила которого будут применяться только при определенных действиях пользователя. Существуют также специальные селекторы, которые позволяют обращаться к различным группам HTML- элементов, например, ко всем элементам с определенным значением атрибута id.
 
@@ -540,47 +550,49 @@ font-color: black; font-color: 12pt} -->
 
 
 
-Универсальный селектор применяет установки, указанные в его блоке определений, ко всем HTML-элементам. Обозначается универсальный селектор символом * - звездочка. Но в том случае, если этот селектор используется в сочетании с другим (или другими) селекторами, то символ * может быть опущен. Например, записи:
+Универсальный селектор применяет установки, указанные в его блоке определений, ко всем HTML-элементам. Обозначается универсальный селектор символом  - звездочка. Но в том случае, если этот селектор используется в сочетании с другим (или другими) селекторами, то символ  может быть опущен. Например, записи:
 
-**. myclass и .myclass*   —эквивалентны;
+. myclass и .myclass   —эквивалентны;
 
-**# id_name и # id_name* — также эквивалентны.
+# id_name и # id_name — также эквивалентны.
 
-*Пример задания:*
+Пример задания:
 
- 
+```html
 
-*<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN ">*
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN ">
 
-*<HTML>*
+<HTML>
 
-*<HEAD>*
+<HEAD>
 
-*<TITLE>*
+<TITLE>
 
 Пример заключения таблицы стиля в SGML-комментарии
 
-*</TITLE>*
+</TITLE>
 
-*<STYLE type ="text/css">*
+<STYLE type ="text/css">
 
-\* *(color=olive} /\* правило с использованием универсального селектора\*/ H1 {color=red}  /\* правило с использованием простого селектора\*/*
+\ (color=olive} /\ правило с использованием универсального селектора\/ H1 {color=red}  /\ правило с использованием простого селектора\/
 
-**.myclass  {font-color=blue}    /\*использование      универсального   селектора в сочетании с селектором классов\*/*
+.myclass  {font-color=blue}    /\использование      универсального   селектора в сочетании с селектором классов\/
 
-*</STYLE>*
+</STYLE>
 
-*<BODY>*
+<BODY>
 
-*…. .......текст документа ......*
+…. .......текст документа ......
 
-*...........текст документа ......*
+...........текст документа ......
 
-*...........текст документа ......*
+...........текст документа ......
 
-*</BODY>*
+</BODY>
 
-*</HTML>*
+</HTML>
+```
+
 
 ## Селектор классов
 
@@ -597,49 +609,55 @@ font-color: black; font-color: 12pt} -->
 
 
 
-**Рис. 5.2.** *Схема использования селектора классов*
+Рис. 5.2. Схема использования селектора классов
 
 Например, чтобы правило применялось ко всем элементам, принадлежащим к классу superclass, используется следующая запись:
 
-*.superclass  {определение}*
+.superclass  {определение}
 
 ## Или другой пример:
 
-*<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN ">*
+
+```html
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN ">
 
 
 
-*<HTML>*
+<HTML>
 
-*<HEAD>*
+<HEAD>
 
-*<TITLE>*
+<TITLE>
 
 Пример заключения таблицы стиля в SGML-комментарии
 
-*</TITLE>*
+</TITLE>
 
-*<STYLE type ="text/css"> H3{color : green} H3.titlepage (color: red} H3.indexpage {color: blue}*
+<STYLE type ="text/css"> H3{color : green} H3.titlepage (color: red} H3.indexpage {color: blue}
 
-*</STYLE>*
+</STYLE>
 
-*</HEAD>*
+</HEAD>
 
-*<BODY>*
+<BODY>
 
-*... текст документа ......*
+... текст документа ......
 
-*... текст документа ......*
+... текст документа ......
 
-*... текст документа ......*
+... текст документа ......
 
-*</BODY> </HTML>*
+</BODY> </HTML>
+
+```
+
 
 При таком задании все заголовки НЗ, принадлежащие к классу titlepage (class = titlepage), будут отображаться красным цветом. Принадлежащие к классу indexpage (class
 
 = indexpage) — синим цветом. Все остальные НЗ-заголовки будут иметь зеленый цвет. Указание класса относится только к одному, слева расположенному селектору. Это значит, что правило
 
-*PRE, P.chapter1 {color: red)*
+PRE, P.chapter1 {color: red)
 
 будет применено ко всем элементам PRE и к элементам Р класса chapter, а не к элементам PRE и Р класса chapter.
 
@@ -657,23 +675,23 @@ font-color: black; font-color: 12pt} -->
 
 
 
-**РИС. 5.3.** *Схема использования селектора ID-имен*
+РИС. 5.3. Схема использования селектора ID-имен
 
  
 
 Например, правило
 
-*Р#famous {font-family: Heretz}*
+Р#famous {font-family: Heretz}
 
 будет применено только к тем HTML-элементам Р, у которых для атрибута id указано значение "famous". Чтобы обратиться ко всем HTML-элементам, имеющим атрибут id = "famous", достаточно следующей записи:
 
-*# famous{определение;*
+# famous{определение;
 
-*определение;*
+определение;
 
 
 
-*…………………… определение}*
+…………………… определение}
 
 В одном правиле может содержаться несколько селекторов. Допустим, разработчику требуется применить одно и то же правило к нескольким разным HTML элементам, не объединённым в классы и имеющим разные id имена. Можно, конечно, написать отдельное правило для каждого такого элемента, но более эффективным и правильным будет перечислить, через запятую селекторы HTML элементов в списке селекторов одного правила. Например:
 
@@ -688,6 +706,7 @@ Font-family: Arial}
 0Возможности CSS2 позволяют учитывать расположение HTML-элементов в иерархическом дереве документа при задании их визуальных характеристик, а также учитывать их контекстное окружение.
 
 Как уже говорилось HTML-элемент, заданный в содержимом другого HTML-элемента, является его потомком. Исходя из этого правила, каждый HTML-документ имеет свое иерархическое дерево. Например, для следующего файла, иерархическое дерево будет иметь вид, приведенный на рис. 5.4:
+```html
 
 <HTML>
 
@@ -721,23 +740,26 @@ Font-family: Arial}
 
 </BODY>
 
-
+```
 
 ![img](/clip_image009.jpg)
 
-**Рис. 5.4.** *Иерархическое дерево HTML-документа*
+Рис. 5.4. Иерархическое дерево HTML-документа
 
 В CSS возможно использование правил, которые будут применяться только к HTML- элементам, являющихся потомками других определенных элементов. При этом к таким же HTML-элементам, не являющимся потомками указанных элементов, данное правило применяться не будет. При задании такого правила через пробел указывается селектор родительского элемента и селектор элемента-потомка. Например, разработчику нужно установить синий цвет для цитат, только если они содержатся в тексте элемента PRE, то есть, если элемент CITE входит в состав элемента PRE:
 
-*<PRE>*
+```html
 
-*отформатированный текст <СIТЕ>цитата*
+<PRE>
 
-*</СIТЕ>*
+отформатированный текст <СIТЕ>цитата
 
-*отформатированный текст*
+</СIТЕ>
 
-*</PRE>.*
+отформатированный текст
+
+</PRE>.
+```
 
 Для этого достаточно использовать следующее правило:
 
@@ -756,19 +778,19 @@ DIV P EM {color: yellow; font-family: Italic}
 |      | ![img](/clip_image011.jpg) |
 
 
- будет применено только к тем элементам ЕМ, которые являются потомками элемента Р, который, в свою очередь, должен являться потомком элемента DIV. Чтобы обратиться ко всем элементам ЕМ, являющимися потомками второго уровня элемента DIV, используется запись DIV * ЕМ. При этом символ "*" должен быть с обеих сторон выделен пробелами. Таким образом, правило, использующее иерархию HTML-элементов документа, имеет общий вид, приведенный на рис. 5.5.
+ будет применено только к тем элементам ЕМ, которые являются потомками элемента Р, который, в свою очередь, должен являться потомком элемента DIV. Чтобы обратиться ко всем элементам ЕМ, являющимися потомками второго уровня элемента DIV, используется запись DIV  ЕМ. При этом символ "" должен быть с обеих сторон выделен пробелами. Таким образом, правило, использующее иерархию HTML-элементов документа, имеет общий вид, приведенный на рис. 5.5.
 
 
 
 
 
-**Рис. 5.5.** *Правило, использующее иерархию HTML-элементов документа*
+Рис. 5.5. Правило, использующее иерархию HTML-элементов документа
 
 
 
 Язык CSS позволяет обращаться к определенным HTML-элементам, учитывая их соседство с другими элементами. При этом какому-либо элементу можно задавать характеристики, которые будут к нему применены только в том случае, если он следует за другим указанным элементом. Например, чтобы обратиться только к тем неупорядоченным спискам, которые следуют после заголовка НЗ, используется следующая запись:
 
-*Н3+UL{объявление;* *объявление; объявление}*
+Н3+UL{объявление; объявление; объявление}
 
  
 
@@ -783,7 +805,7 @@ DIV P EM {color: yellow; font-family: Italic}
 
 
 
-**Рис. 5.6.** *Правило, учитывающее соседство HTML-элементов*
+Рис. 5.6. Правило, учитывающее соседство HTML-элементов
 
 ## Использование псевдоэлементов и псевдоклассов.
 
@@ -791,43 +813,43 @@ DIV P EM {color: yellow; font-family: Italic}
 
 Из всех псевдоклассов сейчас поддерживаются псевдоклассы ссылок (элементов А). Все контекстные ссылки, задаваемые элементом А, в понимании CSS2 принадлежат одному из четырех псевдоклассов:
 
-·    классу visited посещенных ссылок;
+*    классу visited посещенных ссылок;
 
-·    классу link не посещенных ссылок;
+*    классу link не посещенных ссылок;
 
-·    классу active активных ссылок;
+*    классу active активных ссылок;
 
-·    классу hover ссылок, над видимым содержимым которых находится курсор мыши.
+*    классу hover ссылок, над видимым содержимым которых находится курсор мыши.
 
 Например,  чтобы  задать  красный  цвет  для              ссылок, уже    просмотренных пользователем, используется следующее CSS-правило:
 
-*A:  visited  {color:  red}*
+A:  visited  {color:  red}
 
 Полное  цветовое  описание  возможных           состояний элемента  А         может           иметь следующий вид:
+```html
+<!DOCTYPE HTML PUBLIC  "-//W3C//DTD HTML 4.0//EN                ">
 
-*<!DOCTYPE HTML PUBLIC  "-//W3C//DTD HTML 4.0//EN                ">*
+<HTML>
 
-*<HTML>*
+<HEAD>
 
-*<HEAD>*
-
-*<TITLE>*
+<TITLE>
 
 
 
-*Пример задания оформления ссылок средствами CSS*
+Пример задания оформления ссылок средствами CSS
 
-*</TITLE>*
+</TITLE>
 
-*<STYLE type ="text/css">*
+<STYLE type ="text/css">
 
-*A :    visited  {color:  lightgrey} A :    link  {color:  blue}*
+A :    visited  {color:  lightgrey} A :    link  {color:  blue}
 
-*A : active {color: yellow} A : hover {color:  red}*
+A : active {color: yellow} A : hover {color:  red}
 
-*</STYLE>*
+</STYLE>
 
-*</HEAD>*
+</HEAD>
 
 <BODY>
 
@@ -840,18 +862,18 @@ DIV P EM {color: yellow; font-family: Italic}
 </BODY>
 
 </HTML>
-
+```
 В данном случае непосредственно после открытия документа все его ссылки будут отображаться синим цветом. При наведении на ссылку курсора цвет ее изменится на красный. Сразу после щелчка по выбранной ссылке и до того момента, пока не произойдет загрузка целевого документа, цвет ссылки будет желтым. Затем, при откате из открывшегося документа по клавише "Назад" исходная ссылка будет восприниматься браузером как посещенная и отображаться серым цветом.
 
 ## Правила каскадирования
 
 Обработка HTML-файла, содержащего каскадную таблицу стилей, имеет следующие этапы:
 
-**1** **этап.** Синтаксический анализ документа и обработка синтаксических ошибок.
+1 этап. Синтаксический анализ документа и обработка синтаксических ошибок.
 
-**2**  **этап.** Построение иерархического дерева HTML-элементов, образующих данный документ.
+2  этап. Построение иерархического дерева HTML-элементов, образующих данный документ.
 
-**3** **этап.** Применение таблицы стилей в соответствии с правилом установки каскадирования и иерархическим деревом документа.
+3 этап. Применение таблицы стилей в соответствии с правилом установки каскадирования и иерархическим деревом документа.
 
 Иерархическое дерево документа используется для передачи установок родительского элемента элементам-потомкам, то есть благодаря ему реализуется процесс наследования.
 
@@ -876,7 +898,7 @@ DIV P EM {color: yellow; font-family: Italic}
 
 
 
-**Рис. 5.7.** *Окно подключения пользовательских таблиц стилей в браузере Internet Explorer*
+Рис. 5.7. Окно подключения пользовательских таблиц стилей в браузере Internet Explorer
 
  
 
@@ -888,11 +910,11 @@ DIV P EM {color: yellow; font-family: Italic}
 
 !impotent. Например:
 
-*BODY  {background:     laightgrey      !      important; font-color:gray     !  important}*
+BODY  {background:     laightgrey      !      important; font-color:gray     !  important}
 
-Правило-флаг *!impotant* может выставить и автор HTML-документа., но правило
+Правило-флаг !impotant может выставить и автор HTML-документа., но правило
 
-*!impotant* пользователя имеет приоритет над правилом !impotant автора. При задании и подключении нескольких таблиц стилей каждая последующая заданная (или подключенная) таблица имеет приоритет над предыдущей. Говоря точнее, каждый последующий элемент STYLE или LINK имеет приоритет над предыдущим.
+!impotant пользователя имеет приоритет над правилом !impotant автора. При задании и подключении нескольких таблиц стилей каждая последующая заданная (или подключенная) таблица имеет приоритет над предыдущей. Говоря точнее, каждый последующий элемент STYLE или LINK имеет приоритет над предыдущим.
 
 В этом отношении между таблицами, задаваемыми элементами STYLE и LINK, различий не делается. Т.е., если задание подключенной таблицы (элемент LINK) следует после внедренной таблицы (элемент STYLE), то подключенная имеет приоритет над внедренной. Верно также и обратное. В содержимое одного элемента STYLE с помощью правила ©import может быть импортировано несколько таблиц стилей, после чего могут следовать другие правила, задаваемые непосредственно в этом элементе STYLE. Внутри одного элемента STYLE все импортированные установки имеют меньший приоритет по отношению к установкам, заданным в нем непосредственно. Надо помнить, что все правила @import задаются в таблице стилей до определения остальных правил. Если в элемент STYLE импортировано несколько CSS-таблиц, то каждая последующая импортируемая таблица обладает большим приоритетом над предыдущей.
 
@@ -901,14 +923,16 @@ DIV P EM {color: yellow; font-family: Italic}
 
 
 Например, к элементу
+```html
 
-*<НЗ class="vas" id="ret"x/H3>*
+<НЗ class="vas" id="ret"x/H3>
 
 могут быть применены следующие правила:
 
-*НЗ {color:gray} H3.vas {color:red} H3#ret(color:green}*
+НЗ {color:gray} H3.vas {color:red} H3#ret(color:green}
 
-*НЗ,  Н2,  H1  (color:blue)*
+НЗ,  Н2,  H1  (color:blue)
+```
 
 Правило НЗ {color:gray} относится только к заголовкам третьего уровня. Правило H3.vas {color:red) применяется только к элементам НЗ, принадлежащим к классу "vas", то есть является более специфичным по сравнению с предыдущим правилом.
 
@@ -916,26 +940,26 @@ DIV P EM {color: yellow; font-family: Italic}
 
 К HTML-элементам применяются правила, обладающие наибольшей специфичностью, независимо от порядка задания. Специфичность правила определяется по следующей схеме:
 
-*  подсчитывается число атрибутов ID в данном правиле (число а);
+  подсчитывается число атрибутов ID в данном правиле (число а);
 
-*  подсчитывается число других атрибутов и псевдоклассов в данном правиле (число b);
+  подсчитывается число других атрибутов и псевдоклассов в данном правиле (число b);
 
-*  подсчитывается число названий HTML-элементов в данном правиле (число с); Псевдоэлементы и псевдоклассы считаются как обычные элементы и классы.
+  подсчитывается число названий HTML-элементов в данном правиле (число с); Псевдоэлементы и псевдоклассы считаются как обычные элементы и классы.
 
 Далее,  из  чисел  a,  b  и  с  составляется  число  abc,  которое  и показывает специфичность правила. Например:
 
  
 
-| ** {...........................* | *}*  | *а = 0 ,* | *b=0,* | *с=0* | *->* | *специфичность = О*    |
+|  {........................... | }  | а = 0 , | b=0, | с=0 | -> | специфичность = О    |
 | -------------------------------- | ---- | --------- | ------ | ----- | ---- | ---------------------- |
-| *НЗ {  ........................* | *)*  | *а-0,*    | *Ь-0,* | *с=1* | *->* | *специфичность  = 1*   |
-| *НЗ, Н2  {...................*   | *)*  | *а = 0,*  | *Ь=0,* | *с=2* | *->* | *специфичность  = 2*   |
-| *НЗ, Р + UL {  .............*    | *}*  | *а = 0,*  | *Ь=О,* | *с=3* | *->* | *специфичность  = 3*   |
-| *НЗ. var { ..................*   | *}*  | *а-0,*    | *Ь=1,* | *с=1* | *->* | *специфичность  = 11*  |
-| *H3.var, PRE  {............*     | *}*  | *а = 0,*  | *Ь=1,* | *с=2* | *->* | *специфичность  = 12*  |
-| *H3.var, .yty  {...........*     | *}*  | *а = 0,*  | *b=2*  | *c=l* | *->* | *специфичность  = 21*  |
-| *H3#ret {  ..................*   | *}*  | *а = 1,*  | *Ь=0,* | *с=1* | *->* | *специфичность  = 101* |
-| *P#kil, UL LI, \*.tgt. {*        | *}*  | *a=l,*    | *b=l,* | *c=3* | *->* | *специфичность = 113*  |
+| НЗ {  ........................ | )  | а-0,    | Ь-0, | с=1 | -> | специфичность  = 1   |
+| НЗ, Н2  {...................   | )  | а = 0,  | Ь=0, | с=2 | -> | специфичность  = 2   |
+| НЗ, Р + UL {  .............    | }  | а = 0,  | Ь=О, | с=3 | -> | специфичность  = 3   |
+| НЗ. var { ..................   | }  | а-0,    | Ь=1, | с=1 | -> | специфичность  = 11  |
+| H3.var, PRE  {............     | }  | а = 0,  | Ь=1, | с=2 | -> | специфичность  = 12  |
+| H3.var, .yty  {...........     | }  | а = 0,  | b=2  | c=l | -> | специфичность  = 21  |
+| H3#ret {  ..................   | }  | а = 1,  | Ь=0, | с=1 | -> | специфичность  = 101 |
+| P#kil, UL LI, \.tgt. {        | }  | a=l,    | b=l, | c=3 | -> | специфичность = 113  |
 
  
 
@@ -951,108 +975,114 @@ DIV P EM {color: yellow; font-family: Italic}
 
 представления документа рекомендуется создавать стилевые таблицы под каждое устройство вывода, для которого он может предназначаться. Указать целевое устройство можно с помощью правила @media, например:
 
-*@media print          {BODY    {background          :       lightgrey; font-family: Sans serif}*
+@media print          {BODY    {background          :       lightgrey; font-family: Sans serif}
 
-*В  (color:  blue}*
+В  (color:  blue}
 
-*}*
+}
 
 Внешнюю таблицу стилей можно определить для определенного целевого устройства с помощью атрибута media элемента Link, например
+```html
 
 <Link rel = "stylesheet" type = "text/css" media = "print" href = "mystylefile.css">
+```
 
- 
 
 ## Правило @media
 
 Правило @media задает список типов устройств, которым предназначается таблица стилей, расположенная далее и заключенная в фигурные скобки, например:
+```css
 
-*@media tv (*
+@media tv (
 
-*BODY { font-size: 10 pt; font-color: black}*
-
-*}*
-
-Если  таблица  предназначается  нескольким         устройствам             разного     типа,         то      их перечисление осуществляется через запятую, например:
-
-*@media print,  screen  {*
-
-*BODY {font-color:  san serif; font-color: 12  pt ;*
-
-*font-color:  black}*
+BODY { font-size: 10 pt; font-color: black}
 
 }
+```
 
- 
+Если  таблица  предназначается  нескольким         устройствам             разного     типа,         то      их перечисление осуществляется через запятую, например:
+```css
 
- 
+@media print,  screen  {
+
+BODY {font-color:  san serif; font-color: 12  pt ;
+
+font-color:  black}
+
+}
+```
+
+
+
 
 # Типы устройств, распознаваемые CSS2.
 
 Каскадные таблицы стилей, написанные на языке CSS2, могут быть конкретно предназначены следующим типам устройств:
 
-**all** — этот тип предназначен для обозначения устройств всех типов. Его задание говорит о том, что таблица стилей предназначена для всех возможных устройств вывода. Данное значение используется по умолчанию.
+all — этот тип предназначен для обозначения устройств всех типов. Его задание говорит о том, что таблица стилей предназначена для всех возможных устройств вывода. Данное значение используется по умолчанию.
 
-**print** — обозначает печатные устройства и говорит о том, что таблица стилей будет применена к документу при его печати.
+print — обозначает печатные устройства и говорит о том, что таблица стилей будет применена к документу при его печати.
 
-**screen** — обозначает цветной экран монитора.
+screen — обозначает цветной экран монитора.
 
-**tv** — обозначает устройства типа телевизора, для которых характерны следующие характеристики:
+tv — обозначает устройства типа телевизора, для которых характерны следующие характеристики:
 
-·    цветное изображение;
+*    цветное изображение;
 
-·    низкое разрешение;
+*    низкое разрешение;
 
-·    передача звука.
+*    передача звука.
 
-**aural**  —  обозначает  синтезаторы  речи.          Projection      —          обозначает          устройства, предназначенные для проведения презентаций
+aural  —  обозначает  синтезаторы  речи.          Projection      —          обозначает          устройства, предназначенные для проведения презентаций
 
 
 
 (проекторов) и для устройств печати плакатов.
 
-**braille, embossed** — обозначают устройства, используемые для прочтения и печати документов, построенных на азбуке Брайля (для слепых пользователей). Предназначены для документов, требующих тактильного представления.
+braille, embossed — обозначают устройства, используемые для прочтения и печати документов, построенных на азбуке Брайля (для слепых пользователей). Предназначены для документов, требующих тактильного представления.
 
-*Пример использования*
+Пример использования
+```html
 
-*<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN ">*
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN ">
 
-*<HTML>*
+<HTML>
 
-*<HEAD>*
+<HEAD>
 
-*<TITLE>npимep аппаратно-зависимого документа</ТITLЕ>*
+<TITLE>npимep аппаратно-зависимого документа</ТITLЕ>
 
-*<STYLE type ="text/css"> @media screen {*
+<STYLE type ="text/css"> @media screen {
 
-*правила, применяемые к документу, при выводе его на экран монитора правила, применяемые к документу, при выводе его на экран монитора правила, применяемые к документу, при выводе его на экран монитора*
+правила, применяемые к документу, при выводе его на экран монитора правила, применяемые к документу, при выводе его на экран монитора правила, применяемые к документу, при выводе его на экран монитора
 
-*}*
+}
 
-*@media print {*
+@media print {
 
-*правила, применяемые к документу, при его печати правила, применяемые к документу, при его печати правила, применяемые к документу, при его печати*
+правила, применяемые к документу, при его печати правила, применяемые к документу, при его печати правила, применяемые к документу, при его печати
 
-*}*
+}
 
-*@media aural {*
+@media aural {
 
-*правила, применяемые к документу, при его звуковом воспроизведении правила, применяемые к документу, при его звуковом воспроизведении правила, применяемые к документу, при его звуковом воспроизведении*
+правила, применяемые к документу, при его звуковом воспроизведении правила, применяемые к документу, при его звуковом воспроизведении правила, применяемые к документу, при его звуковом воспроизведении
 
-*}*
+}
 
-*правила, применяемые к документу, в не зависимости от устройства вывода правила, применяемые к документу, в не зависимости от устройства вывода правила, применяемые к документу, в не зависимости от устройства вывода*
+правила, применяемые к документу, в не зависимости от устройства вывода правила, применяемые к документу, в не зависимости от устройства вывода правила, применяемые к документу, в не зависимости от устройства вывода
 
-*</STYLE>*
+</STYLE>
 
-*</HEAD>*
+</HEAD>
 
-*……текст документа……*
+……текст документа……
 
-*……текст документа……*
+……текст документа……
 
-*……текст документа……*
+……текст документа……
 
-*</BODY>*
+</BODY>
 
-*</HTML>*
+</HTML>
+```
