--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.1/3.1.md
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.1/3.1.md
@@ -189,7 +189,7 @@ P  {background — color:  yellow}
 
 </STYLE>
 ```
-Значением свойства ©import является URL-адрес файла, хранящего в себе импортируемую таблицу стилей. Элемент STYLE вместе с описанием свойства ©import может содержать в себе и другие правила. Надо только, чтобы они следовали после задания свойства ©import.
+Значением свойства import является URL-адрес файла, хранящего в себе импортируемую таблицу стилей. Элемент STYLE вместе с описанием свойства import может содержать в себе и другие правила. Надо только, чтобы они следовали после задания свойства import.
 
 Например:
 
@@ -222,11 +222,7 @@ P {background — color: yellow}
 
 В основе всех версий CSS (CSS1, CSS2 и в будущем CSS3) лежит общий для всех набор синтаксических правил. Именно благодаря этому обстоятельству обеспечивается преемственность различных версий CSS. В том случае, если браузер поддерживает ранние версии CSS и не поддерживает новые возможности, то последние будут просто им проигнорированы. Однако правила, которые браузер в состоянии применить, он применит.
 
-Каскадная таблица стилей, написанная на языке CSS любой версии, представляет собой список правил, которые в свою очередь подразделяются на обычные правила и
-
-©правила (читается как Эй-ти- правило). В тексте таблицы стилей с обоих сторон правила в строке может находиться пустое пространство любых размеров.
-
-Начинаются ©правила с ключевого символа @, непосредственно за которым следует указание имени правила. Затем ©правило включает в себя все, что находится до первого символа точки с запятой или другого правила. Следует помнить, что все правила ©import, которые находятся внутри блока определений другого ©правила, будут проигнорированы браузером.
+Начинаются правила с ключевого символа @, непосредственно за которым следует указание имени правила. Затем правило включает в себя все, что находится до первого символа точки с запятой или другого правила. Следует помнить, что все правила import, которые находятся внутри блока определений другого правила, будут проигнорированы браузером.
 
 Пример недопустимого задания:
 
@@ -236,7 +232,7 @@ P {background — color: yellow}
 
 
 
-К тому же, если таблица стилей содержит еще другие правила, кроме правил ©import, то эти правила должны располагаться ниже по тексту правил ©import.
+К тому же, если таблица стилей содержит еще другие правила, кроме правил import, то эти правила должны располагаться ниже по тексту правил import.
 
 Пример неправильного задания:
 ```css
@@ -289,27 +285,21 @@ P{background-color: blue}
 
 
 
-Небольшая тонкость заключается в отличии обработки CSS правил разными браузерами. Браузер Internet Explorer, если какое либо свойство в правиле задано неправильно, игнорирует только это свойство, а все остальные свойства этого правила учитывает. Браузер Netscape Communicator 4.74 в этой ситуации игнорирует всё правило. Netscape Communicator 6 этого недостатка лишён и ошибки обрабатывает аналогично Internet Explorer.
+> Небольшая тонкость заключается в отличии обработки CSS правил разными браузерами. Браузер Internet Explorer, если какое либо свойство в правиле задано неправильно, игнорирует только это свойство, а все остальные свойства этого правила учитывает. Браузер Netscape Communicator 4.74 в этой ситуации игнорирует всё правило. Netscape Communicator 6 этого недостатка лишён и ошибки обрабатывает аналогично Internet Explorer.
 
 Объявление может не определять никакого свойства. При этом оно называется пустым. Например,
 
 ## IMG {}.
 
-Где:  IMG — селектор;
 
-{} — блок определений.
 
 Каскадные таблицы стилей CSS2 не учитывают регистр. Это значит, что названия правил, селекторов и их значения можно указывать как прописными, так и строчными буквами. Чувствительными к регистру могут оказаться объекты, присутствующие в таблице стилей, но не являющиеся объектами языка CSS. Например, по-прежнему учитывается регистр атрибутов id и class у HTML-элементов.
 
-Примечание.\ Если таблицы стилей будут применяться к XML-файлам, то необходимо помнить о том, что имена элементов в XML (в отличие от HTML) также являются чувствительными к регистру.
 
-При написании текста таблиц стилей допустимо использование комментариев. Они должны начинаться символом "/" и заканчиваться символом "/" Например:
 
 В {font-color: blue; /комментарии / font-size : 14pt / комментарии /}
 
-В CSS допустимо также использование комментариев "<!--" и "-->", установленных в HTML. При корретной поддержке CSS-таблиц стилей браузером группы символов "<!-- " "
-
--->" будут проигнорированы. При этом они никаких комментариев создавать не могут.
+> В CSS допустимо также использование комментариев "<!--" и "-->", установленных в HTML. При корретной поддержке CSS-таблиц стилей браузером группы символов "<!-- " "-->" будут проигнорированы. При этом они никаких комментариев создавать не могут.
 
 Использовать SGML-комментарии имеет смысл только тогда, когда требуется скрыть содержимое таблицы стилей от браузеров, работающих с HTML 3.2 и более ранних версий, где эти таблицы не поддерживаются. Иначе текст таблицы будет отображаться в окне браузера как содержимое документа. Чтобы этого избежать, как раз и рекомендуется текст css-таблицы заключать в SGML-комментарии. Например:
 
@@ -365,7 +355,7 @@ font-color: black; font-color: 12pt} -->
 
 При синтаксической проверке браузером CSS-таблицы стилей могут возникать следующие ошибки и соответствующие им действия браузера:
 
-Ø Если указано имя несуществующего свойства (или сделана ошибка при написании существующего), то браузером будет проигнорировано объявление, его содержащее. Например, правило
+  Если указано имя несуществующего свойства (или сделана ошибка при написании существующего), то браузером будет проигнорировано объявление, его содержащее. Например, правило
 
 ```css
 В {font-color: blue;
@@ -376,7 +366,7 @@ thick:15; /\thick - несуществующее свойство\/ font-size:14
 
 В (font-color: blue; font-size : 14 pt}
 
-Ø Если для определенного в CSS2 свойства указано недопустимое значение, то также будет проигнорировано содержащее его объявление. Например, фрагмент таблицы стилей:
+ Если для определенного в CSS2 свойства указано недопустимое значение, то также будет проигнорировано содержащее его объявление. Например, фрагмент таблицы стилей:
 
 Р {font-color:black}
 
@@ -390,7 +380,7 @@ P{font-color: black} Р{ }
 
 Р{}
 
-Ø Если неверно задано имя ©правила, то игнорируется все, что относится к этому правилу. Например, фрагмент CSS-таблицы:
+  Если неверно задано имя правила, то игнорируется все, что относится к этому правилу. Например, фрагмент CSS-таблицы:
 
 @superstyle {
 
@@ -431,27 +421,23 @@ BODY {font-style:Arial}
 
 В CSS2 допустимо использование двух типов задание длины: относительное задание и абсолютное. Относительное задание длины подразумевает ее задание относительно чего-то. К относительным единицам относятся:
 
-em.......................... lem равен используемому значению свойства font-size элемента, к
+* em.......................... lem равен используемому значению свойства font-size элемента, к которому данный em-размер применяется;
 
-которому данный em-размер применяется;
+* ex............................ lex равен размеру высоты строчной буквых для используемого шрифта;
 
-ex............................ lex равен размеру высоты строчной буквых для используемого шрифта;
+* рх............................ указывает размер в пикселах и, соответственно, зависит от разрешения экрана.
 
-рх............................ указывает размер в пикселах и, соответственно, зависит от разрешения
+> Использование  абсолютных  единиц  измерения                 предпочтительно     только     в                 тех случаях, когда известны геометрические размеры устройства вывода.
 
-экрана.
+* cm........................... сантиметр;
 
-Использование  абсолютных  единиц  измерения                 предпочтительно     только     в                 тех случаях, когда известны геометрические размеры устройства вывода.
+* mm.......................... миллиметр;
 
-cm........................... сантиметр;
+* in............................ дюйм (1 дюйм равен 2,54 см);
 
-mm.......................... миллиметр;
+* pt............................ точка (point). В CSS2 lpt = 1/72 дюйма;
 
-in............................ дюйм (1 дюйм равен 2,54 см);
-
-pt............................ точка (point). В CSS2 lpt = 1/72 дюйма;
-
-рс............................ пика. В CSS2 1пика = 12 точкам.
+* рс............................ пика. В CSS2 1пика = 12 точкам.
 
  
 
@@ -473,7 +459,7 @@ Body {background: url[ (w](http://www.myserver.da.ru/myimage.gif)w[w.myserver.da
 
 Для задания цвета отображаемого содержимого HTML-элемента могут применяться следующие возможности:
 
-§  указание цвета с помощью ключевых слов. Пример:
+указание цвета с помощью ключевых слов. Пример:
 
 H3{color: blue}
 
@@ -481,17 +467,17 @@ H3{color: blue}
 
  
 
-§  указание цвета с помощью шестнадцатеричного задания его RGB-кода. Например:
+ указание цвета с помощью шестнадцатеричного задания его RGB-кода. Например:
 
 НЗ {color: # FFFFFFFF}
 
 
 
-§  указание цвета с помощью десятеричного задания его RGB-кода. При этом используются целые числа в диапазоне от 0 до 255. Например:
+ указание цвета с помощью десятеричного задания его RGB-кода. При этом используются целые числа в диапазоне от 0 до 255. Например:
 
 НЗ (color: rgb (0,255,0)} /\ зеленым цветом\/
 
-§  указание цвета с помощью процентного задания насыщенности каждого из цветов в RGB-коде. При этом используются вещественные числа в интервале от 0% до 100%. Например:
+ указание цвета с помощью процентного задания насыщенности каждого из цветов в RGB-коде. При этом используются вещественные числа в интервале от 0% до 100%. Например:
 
 НЗ {color: rgb (0%,100%,0%) }
 
@@ -534,15 +520,9 @@ grad........................ грады.
 |      | ![img](/clip_image004.jpg) |
 
 
- Все обычные правила CSS состоят из селекторов и соответствующих им блоков определений. В этом разделе будет произведено детальное рассмотрение используемых в CSS селекторов. Простейший селектор представляет собой название HTML-элемента. Такой селектор называется "простым селектором" (рис. 5.1).
+ 
 
-
-
-
-
-Рис. 5.1. Пример простого селектора
-
-Простые селекторы употребляются наиболее часто. Однако язык CSS2 позволяет использовать более широкие возможности для создания таблиц стилей. Например, можно описать свойства HTML-элемента, который является дочерним по отношению к другому HTML-элементу. Также можно использовать селектор, правила которого будут применяться только при определенных действиях пользователя. Существуют также специальные селекторы, которые позволяют обращаться к различным группам HTML- элементов, например, ко всем элементам с определенным значением атрибута id.
+> Простые селекторы употребляются наиболее часто. Однако язык CSS2 позволяет использовать более широкие возможности для создания таблиц стилей. Например, можно описать свойства HTML-элемента, который является дочерним по отношению к другому HTML-элементу. Также можно использовать селектор, правила которого будут применяться только при определенных действиях пользователя. Существуют также специальные селекторы, которые позволяют обращаться к различным группам HTML- элементов, например, ко всем элементам с определенным значением атрибута id.
 
  
 
@@ -552,7 +532,7 @@ grad........................ грады.
 
 Универсальный селектор применяет установки, указанные в его блоке определений, ко всем HTML-элементам. Обозначается универсальный селектор символом  - звездочка. Но в том случае, если этот селектор используется в сочетании с другим (или другими) селекторами, то символ  может быть опущен. Например, записи:
 
-. myclass и .myclass   —эквивалентны;
+
 
 # id_name и # id_name — также эквивалентны.
 
@@ -685,21 +665,11 @@ PRE, P.chapter1 {color: red)
 
 будет применено только к тем HTML-элементам Р, у которых для атрибута id указано значение "famous". Чтобы обратиться ко всем HTML-элементам, имеющим атрибут id = "famous", достаточно следующей записи:
 
-# famous{определение;
-
-определение;
+# famous определение;
 
 
-
-…………………… определение}
 
 В одном правиле может содержаться несколько селекторов. Допустим, разработчику требуется применить одно и то же правило к нескольким разным HTML элементам, не объединённым в классы и имеющим разные id имена. Можно, конечно, написать отдельное правило для каждого такого элемента, но более эффективным и правильным будет перечислить, через запятую селекторы HTML элементов в списке селекторов одного правила. Например:
-
-H1, P, Q {color: lightgrey;
-
-Font-family: Arial}
-
-.my-class, B {color: black}
 
 ## Селекторы контекстного окружения
 
@@ -746,7 +716,7 @@ Font-family: Arial}
 
 Рис. 5.4. Иерархическое дерево HTML-документа
 
-В CSS возможно использование правил, которые будут применяться только к HTML- элементам, являющихся потомками других определенных элементов. При этом к таким же HTML-элементам, не являющимся потомками указанных элементов, данное правило применяться не будет. При задании такого правила через пробел указывается селектор родительского элемента и селектор элемента-потомка. Например, разработчику нужно установить синий цвет для цитат, только если они содержатся в тексте элемента PRE, то есть, если элемент CITE входит в состав элемента PRE:
+> В CSS возможно использование правил, которые будут применяться только к HTML- элементам, являющихся потомками других определенных элементов. При этом к таким же HTML-элементам, не являющимся потомками указанных элементов, данное правило применяться не будет. При задании такого правила через пробел указывается селектор родительского элемента и селектор элемента-потомка. Например, разработчику нужно установить синий цвет для цитат, только если они содержатся в тексте элемента PRE, то есть, если элемент CITE входит в состав элемента PRE:
 
 ```html
 
@@ -877,9 +847,9 @@ A : active {color: yellow} A : hover {color:  red}
 
 Иерархическое дерево документа используется для передачи установок родительского элемента элементам-потомкам, то есть благодаря ему реализуется процесс наследования.
 
-Все каскадные таблицы стилей, используемые для форматирования документа, выстраиваются в каскад в соответствии со своим приоритетом. По этому каскаду и "прогоняется" документ. Сначала применяются таблицы стилей с меньшим приоритетом, затем — с большим приоритетом. При этом для одноименных HTML-элементов правила таблиц с большим приоритетом перекрывают правила таблиц с меньшим приоритетом.
+> Все каскадные таблицы стилей, используемые для форматирования документа, выстраиваются в каскад в соответствии со своим приоритетом. По этому каскаду и "прогоняется" документ. Сначала применяются таблицы стилей с меньшим приоритетом, затем — с большим приоритетом. При этом для одноименных HTML-элементов правила таблиц с большим приоритетом перекрывают правила таблиц с меньшим приоритетом.
 
-Если для одного HTML-элемента указано несколько одинаковых правил в рамках одной таблицы стилей, то приоритет имеет правило заданное последним. Все таблицы стилей в качестве своего источника могут иметь разработчика, пользователя или браузер. Самым низким приоритетом обладают стилевые установки, используемые браузером по умолчанию. Таблицы стилей, заданные разработчиком, имеют приоритет над таблицами, применяемыми к документу пользовательскими таблицами стилей.
+> > Если для одного HTML-элемента указано несколько одинаковых правил в рамках одной таблицы стилей, то приоритет имеет правило заданное последним. Все таблицы стилей в качестве своего источника могут иметь разработчика, пользователя или браузер. Самым низким приоритетом обладают стилевые установки, используемые браузером по умолчанию. Таблицы стилей, заданные разработчиком, имеют приоритет над таблицами, применяемыми к документу пользовательскими таблицами стилей.
 
 По умолчанию к браузеру никаких пользовательских таблиц не подключено, но это всегда можно сделать. Для этого написанная Вами таблица стилей помещается в .css- файл. Затем в браузере в разделе "Сервис | Свойства обозревателя | Оформление"
 
@@ -916,7 +886,7 @@ BODY  {background:     laightgrey      !      important; font-color:gray     !  
 
 !impotant пользователя имеет приоритет над правилом !impotant автора. При задании и подключении нескольких таблиц стилей каждая последующая заданная (или подключенная) таблица имеет приоритет над предыдущей. Говоря точнее, каждый последующий элемент STYLE или LINK имеет приоритет над предыдущим.
 
-В этом отношении между таблицами, задаваемыми элементами STYLE и LINK, различий не делается. Т.е., если задание подключенной таблицы (элемент LINK) следует после внедренной таблицы (элемент STYLE), то подключенная имеет приоритет над внедренной. Верно также и обратное. В содержимое одного элемента STYLE с помощью правила ©import может быть импортировано несколько таблиц стилей, после чего могут следовать другие правила, задаваемые непосредственно в этом элементе STYLE. Внутри одного элемента STYLE все импортированные установки имеют меньший приоритет по отношению к установкам, заданным в нем непосредственно. Надо помнить, что все правила @import задаются в таблице стилей до определения остальных правил. Если в элемент STYLE импортировано несколько CSS-таблиц, то каждая последующая импортируемая таблица обладает большим приоритетом над предыдущей.
+> В этом отношении между таблицами, задаваемыми элементами STYLE и LINK, различий не делается. Т.е., если задание подключенной таблицы (элемент LINK) следует после внедренной таблицы (элемент STYLE), то подключенная имеет приоритет над внедренной. Верно также и обратное. В содержимое одного элемента STYLE с помощью правила import может быть импортировано несколько таблиц стилей, после чего могут следовать другие правила, задаваемые непосредственно в этом элементе STYLE. Внутри одного элемента STYLE все импортированные установки имеют меньший приоритет по отношению к установкам, заданным в нем непосредственно. Надо помнить, что все правила @import задаются в таблице стилей до определения остальных правил. Если в элемент STYLE импортировано несколько CSS-таблиц, то каждая последующая импортируемая таблица обладает большим приоритетом над предыдущей.
 
 Кроме всего вышеперечисленного, приоритет какого-либо правила по сравнению с другими правилами, применяемыми к одному и тому же элементу, определяется, исходя из специфичности правила.
 
@@ -967,7 +937,7 @@ BODY  {background:     laightgrey      !      important; font-color:gray     !  
 
  
 
-# Возможности  CSS2  по  созданию              аппаратно-зависимых таблиц стилей.
+# Возможности  CSS2  по  созданию аппаратное-зависимых таблиц стилей.
 
 Возможности языка CSS2 позволяют разработчикам создавать аппаратно-зависимые таблицы стилей. Или, говоря другими словами, таблицы стилей для определенных устройств вывода: монитора, принтера, телевизора, синтезатора речи и т.п. В силу технических особенностей этих устройств один и тот же документ может иметь у них разное визуальное представление (внешний вид). Например, общеизвестным считается тот факт, что для отображения текста на экране монитора требуется больший размер шрифта, чем для его печати. Поэтому для достижения наилучшего качества
 
@@ -987,10 +957,12 @@ BODY  {background:     laightgrey      !      important; font-color:gray     !  
 <Link rel = "stylesheet" type = "text/css" media = "print" href = "mystylefile.css">
 ```
 
-
 ## Правило @media
 
+
+
 Правило @media задает список типов устройств, которым предназначается таблица стилей, расположенная далее и заключенная в фигурные скобки, например:
+
 ```css
 
 @media tv (
